Fixed linear gradient bug on Safari

--- a/css/style.css
+++ b/css/style.css
@@ -798,7 +798,7 @@ header {
   bottom: 0;
   height: 50px;
   width: 100%;
-  background: linear-gradient(transparent, #584096);
+  background: linear-gradient(rgba(88, 64, 150, 0), #584096);
 }
 .service-card-button {
   /*!
